--- a/app/src/main/res/layout/item2.xml
+++ b/app/src/main/res/layout/item2.xml
@@ -1,18 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="10dp"
-    android:orientation="vertical">
-
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        >
 
         <ImageView
-            android:id="@+id/logo"
+            android:id="@+id/logo2"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:src="@mipmap/ic_launcher"/>
@@ -22,11 +20,11 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
             <TextView
-                android:text="Estrella"
+                android:text="Planeta"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
             <TextView
-                android:id="@+id/plnt"
+                android:id="@+id/plnt2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
 
@@ -35,7 +33,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
             <TextView
-                android:id="@+id/desp"
+                android:id="@+id/desp2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
 
@@ -43,6 +41,5 @@
 
     </LinearLayout>
 
-    <!--    Segunda imagen-->
-</LinearLayout>
 
+</LinearLayout>
