--- a/app/src/main/res/layout/activity_menu2.xml
+++ b/app/src/main/res/layout/activity_menu2.xml
@@ -4,11 +4,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".menu2">
+    tools:context=".menu2"
+    android:background="@drawable/fondo3">
 
-    <TextView
+    <LinearLayout
+        android:id="@+id/lin2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="hola2"/>
+        android:layout_margin="15dp"
+        android:layout_centerHorizontal="true"
+        android:orientation="vertical">
+
+        <TextView
+            android:text="@string/title3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="50dp"
+            android:textColor="#C1C1C1"
+            android:fontFamily="sans-serif-black"/>
+
+
+    </LinearLayout>
 
 </RelativeLayout>
