--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -24,20 +24,32 @@
             <TextView
                 android:text="Estrella"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:textSize="20dp"
+                android:textColor="#C1C1C1"
+                android:fontFamily="sans-serif-black"/>
             <TextView
                 android:id="@+id/plnt"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:textSize="15dp"
+                android:textColor="#C1C1C1"
+                android:fontFamily="sans-serif"/>
 
             <TextView
                 android:text="Clic "
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:textSize="20dp"
+                android:textColor="#C1C1C1"
+                android:fontFamily="sans-serif-black"/>
             <TextView
                 android:id="@+id/desp"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:textSize="15dp"
+                android:textColor="#C1C1C1"
+                android:fontFamily="sans-serif"/>
 
         </LinearLayout>
 
