--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,10 +25,11 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/lin2"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="520dp"
         android:layout_below="@+id/lin1"
-        android:layout_margin="20dp">
+        android:layout_margin="30dp">
 
         <ScrollView
             android:layout_width="match_parent"
@@ -37,7 +38,8 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                >
                 <ListView
                     android:id="@+id/listap"
                     android:layout_width="wrap_content"
@@ -100,6 +102,15 @@
 
 
     </LinearLayout>
+
+    <Button
+        android:id="@+id/crr1"
+        android:layout_below="@id/lin2"
+        android:text="Salir"
+        android:layout_width="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_height="wrap_content"
+        />
 
 
 
